crates/ink/tests/ui/event/fail/name-override-invalid-02.stderr
error: `name` attribute argument value can only contain alphanumeric characters, underscores and dollar signs
 --> tests/ui/event/fail/name-override-invalid-02.rs:1:21
  |
1 | #[ink::event(name = "My-Event")]
  |                     ^^^^^^^^^^
